Windows GraphicConfig issue fixed for Gradle also
In addition, the logfiles are now named using the full version number